feat: api's para dashboard
